finish congig security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,9 @@ spring.datasource.username=postgres
 spring.datasource.password=phihuynh110
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+server.port=8000
+
+# App Properties
+rookies.app.jwtSecret=rookiesSecretKey
+rookies.app.jwtExpirationMs=86400000
