change category service

--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,11 @@
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.7.0</version>
         </dependency>
+
+
+        <!-- junit 5, unit test -->
+
+
     </dependencies>
 
 
